--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -13,6 +13,8 @@
 .bg-black{
     background: #1F2D3D;
 }
+
+
 .hearder{
     width: 100%;
     height: 70px;
@@ -26,6 +28,18 @@
     height: 100%;
 }
 .content{
-    margin: 15px 0px 0px 15px;
+    /*margin: 15px 0px 0px 15px;*/
+    padding: 15px;
     min-height: 768px;
+    max-height: 1080px;
+    overflow-y: scroll;
+
+}
+.breadcrumb{
+    height: 30px;
+    border-bottom: 1px solid #bfcbd9;
+    margin-bottom: 22px;
+}
+.list-page{
+    margin-top: 5px; 
 }
