--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -37,7 +37,28 @@ html,body,#app{
     border-style: solid;
 }
 .search-box{
-    padding-top: 15px; 
+    background: #f2f2f2;
+    padding: 10px 0px ;
+    padding-bottom: 0px;
+    margin: 10px 0;
+    width: 99%;
+}
+.search-box>div{
+    padding-left: 10px
+}
+.search-box .el-form-item{
+    margin-bottom: 10px;
+}
+.search-box .el-form-item__content{
+    height: 36px;
+}
+.tool-box{
+    background: #f2f2f2;
+    padding: 10px 0px ;
+    width: 99%;
+}
+.tool-box>div{
+    padding-left: 10px;
 }
 .page-box{
     margin: 10px 0px; 
